# pyprac

20250217/1/: prog.py
20250224/0/: prog.py
20250224/2/: prog.py
20250303/1/: prog.py
20250310/1/: prog.py
20250317/1/: client.py  common.py  prog.py  server.py
20250317/1/patchdir/: 0001-added-server.py.patch  0002-added-client.py.patch  0003-separated-common-part.patch
20250324/0/: prog.py
20250324/1/: client.py  server.py
20250331/0/: .flake8  prog.py
20250331/1/: client.py
20250331/2/: server.py
20250407/0/doc/: cmdscript.py  conf.py  index.rst  restcalend.py  restcalend.rst
20250407/1/: Pipfile
20250414/0/: Pipfile  main.py  messages.pot
20250414/2/: Pipfile
20250421/0/: client.py  sq_serv.py  sqroot.py  test_serv.py  tests.py
20250421/1/: test.py
20250421/2/: Pipfile
20250428/1/: .doit.db  Pipfile  test_client.py  test_client_commands.py  test_server_commands.py
20250512/1/: .doit.db  Pipfile  dodo.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.mood  test_client_commands.py  test_server_commands.py
20250512/1/docs/_build/: index.html  search.html  server.html
20250512/1/docs/_build/.doctrees/: environment.pickle  index.doctree  server.doctree
20250512/1/docs/_build/doctrees/: index.doctree
20250512/1/mood/client/: __main__.py  client.py
20250512/1/mood/server/: __main__.py  server.py
20250512/1/mood/server/locale/: messages.pot
20250512/1/mood/server/locale/ru_RU/LC_MESSAGES/: messages.mo  messages.po
20250512/1/mood_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+63 files in other folders)
